--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,16 +1,17 @@
-name: consul
+name: consul-client
 base: core22
-version: "0.1"
-summary: Snap of service mesh software HashiCorp Consul
+version: "2024.1"
+summary: Snap for running HashiCorp Consul in client mode for OpenStack Sunbeam
 description: |
   The OpenStack Sunbeam project uses HashiCorp Consul to provide support
   for OpenStack Masakari. OpenStack Masakari provides automated recovery
   for OpenStack virtual machine instances in the event of cloud
   failures. OpenStack Masakari can use HashiCorp Consul to monitor
-  the status of OpenStack host machines
+  the status of OpenStack hypervisor hosts. This snap provides Consul
+  for use in client mode.
 
-grade: devel # must be 'stable' to release into candidate/stable channels
-confinement: devmode # use 'strict' once you have the right plugs and slots
+grade: devel # still needing to develop this snap further
+confinement: strict
 
 parts:
   consul: # Consul builds using make and not a simple golang build
@@ -29,11 +30,13 @@ parts:
 
       make
 
-      mkdir -p $CRAFT_PART_INSTALL/usr/local/bin
-      cp ./bin/consul $CRAFT_PART_INSTALL/usr/local/bin/consul
+      cp ./bin/consul $CRAFT_PART_INSTALL/consul
+    stage:
+    - consul
 
 apps:
-  consul:
-    command: usr/local/bin/consul
+  consul-client: # consul needs to be able to bind to a listening port
+    command: consul
     plugs:
-    - home
+    - network
+    - network-bind
