Integrate plug-slot connection and adjust paths for hypervisor socket
- Added slot to openstack-hypervisor snap to expose shutdown listener socket
- Added corresponding plug in consul-client-operator for connection
- Adjusted directory path to ensure consistent and reliable socket access

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -45,3 +45,9 @@ parts:
     source: snap-wrappers/
     organize:
       "*": commands/
+
+plugs:
+  consul-socket:
+    interface: content
+    content: consul-unix-sock
+    target: $SNAP_DATA
