Allow the consul cli to talk to the network
When enabling the consul-agent http endpoint, we can't use the consul
cli to talk with it, because it is not allowed to talk to the network.

Signed-off-by: Guillaume Boutry <guillaume.boutry@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,6 +13,8 @@ confinement: strict
 apps:
   consul-client:
     command: bin/consul
+    plugs:
+      - network
   consul:
     daemon: simple
     command: commands/consul-wrapper
